@@ -335,6 +335,8 @@ CREATE TABLE `tl_page` (
 -- 
 
 CREATE TABLE `tl_content` (
+  `iso_reader_jumpTo` int(10) unsigned NOT NULL default '0',
+  `iso_list_layout` varchar(64) NOT NULL default '',
   `iso_attribute_set` int(10) unsigned NOT NULL default '0',
   `iso_filters` varchar(255) NOT NULL default '0'
 ) ENGINE=MyISAM DEFAULT CHARSET=utf8;
