@@ -35,7 +35,6 @@ $GLOBALS['TL_DCA']['tl_content']['palettes']['attributeLinkRepeater'] = 'type,he
 /**
  * Fields
  */
-
 $GLOBALS['TL_DCA']['tl_content']['fields']['iso_filters'] = array
 (
 	'label'                   => &$GLOBALS['TL_LANG']['tl_content']['iso_filters'],
@@ -43,6 +42,25 @@ $GLOBALS['TL_DCA']['tl_content']['fields']['iso_filters'] = array
 	'inputType'               => 'select',
 	'eval'                    => array('includeBlankOption'=>true),
 	'options_callback'		  => array('PageFilters','getFilters')
+);
+
+$GLOBALS['TL_DCA']['tl_content']['fields']['iso_reader_jumpTo'] = array
+(
+	'label'                   => &$GLOBALS['TL_LANG']['tl_content']['iso_reader_jumpTo'],
+	'exclude'                 => true,
+	'inputType'               => 'pageTree',
+	'explanation'             => 'jumpTo',
+	'eval'                    => array('fieldType'=>'radio'),
+);
+
+$GLOBALS['TL_DCA']['tl_content']['fields']['iso_list_layout'] = array
+(
+	'label'                   => &$GLOBALS['TL_LANG']['tl_content']['iso_list_layout'],
+	'default'                 => 'iso_list_default',
+	'exclude'                 => true,
+	'inputType'               => 'select',
+	'options'                 => (version_compare(VERSION.BUILD, '2.9.0', '>=')) ? $this->getTemplateGroup('iso_list_', $dc->activeRecord->pid) : $this->getTemplateGroup('iso_list_'),
+	'eval'					  => array('includeBlankOption'=>true),
 );
 
 
