@@ -11,6 +11,7 @@ Version 0.2.beta2
 - Added: CSS class even/odd for product list
 - Added: Watermark option for gallery and thumbnail images
 - Added: Addresses are added to address book on checkout (enable in checkout module) (Ticket #24)
+- Added: Abstract class ContentIsotope to build content elements
 - Added: Cybersource payment gateway
 - Improved: Downloads can now be added to product variants (Ticket #116)
 - Improved: PayPal Standard now shows products on paypal page (Ticket #146)
